Enhance security and user management by implementing role-based access control and refactoring user retrieval logic