@@ -3,6 +3,7 @@ package com.mustafa_mert.backend.user;
 import com.mustafa_mert.backend.common.exception.BaseException;
 import com.mustafa_mert.backend.event.entity.Event;
 import com.mustafa_mert.backend.event.repository.EventRepository;
+import com.mustafa_mert.backend.security.CurrentUserProvider;
 import com.mustafa_mert.backend.ticket_purchase.entity.TicketPurchase;
 import com.mustafa_mert.backend.ticket_purchase.repository.TicketPurchaseRepository;
 import com.mustafa_mert.backend.user.dto.ChangePasswordRequest;
@@ -10,24 +11,19 @@ import com.mustafa_mert.backend.user.dto.UserResponse;
 import com.mustafa_mert.backend.user.entity.User;
 import com.mustafa_mert.backend.user.repository.UserRepository;
 import com.mustafa_mert.backend.user.service.UserServiceImpl;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
-import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Optional;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -45,267 +41,112 @@ class UserServiceImplTest {
     @Mock
     private PasswordEncoder passwordEncoder;
 
+    @Mock
+    private CurrentUserProvider currentUserProvider;
+
     @InjectMocks
     private UserServiceImpl userService;
 
-    private User normalUser;
-    private User adminUser;
-    private ChangePasswordRequest changePasswordRequest;
+    private User user;
 
     @BeforeEach
     void setUp() {
-        normalUser = User.builder()
-                .id(1L)
-                .email("user@gmail.com")
-                .firstName("Mustafa")
-                .lastName("Ilter")
-                .role("USER")
-                .passwordHash("oldEncodedPassword")
-                .build();
-
-        adminUser = User.builder()
-                .id(2L)
-                .email("admin@gmail.com")
-                .firstName("Admin")
-                .lastName("User")
-                .role("ADMIN")
-                .passwordHash("adminEncodedPassword")
-                .build();
-
-        changePasswordRequest = new ChangePasswordRequest();
-        changePasswordRequest.setPassword("newPassword");
-    }
-
-    @AfterEach
-    void clearSecurityContext() {
-        SecurityContextHolder.clearContext();
-    }
-
-    private void setAuthenticatedUser(String email) {
-        UsernamePasswordAuthenticationToken authentication =
-                new UsernamePasswordAuthenticationToken(email, null, Collections.emptyList());
-
-        SecurityContextHolder.getContext().setAuthentication(authentication);
+        user = new User();
+        user.setId(1L);
+        user.setEmail("test@gmail.com");
+        user.setFirstName("Mustafa");
+        user.setLastName("Ilter");
+        user.setPasswordHash("encodedOldPassword");
     }
 
     @Test
-    void getMe_WhenCurrentUserExists_ShouldReturnUserResponse() {
-        setAuthenticatedUser("user@gmail.com");
-
-        when(userRepository.findByEmail("user@gmail.com")).thenReturn(Optional.of(normalUser));
+    void getMe_shouldReturnCurrentUserInformation() {
+        when(currentUserProvider.getCurrentUser()).thenReturn(user);
 
         UserResponse response = userService.getMe();
 
-        assertNotNull(response);
-        assertEquals(normalUser.getId(), response.getId());
-        assertEquals(normalUser.getEmail(), response.getEmail());
-        assertEquals(normalUser.getFirstName(), response.getFirstName());
-        assertEquals(normalUser.getLastName(), response.getLastName());
-        assertEquals(normalUser.getRole(), response.getRole());
+        assertThat(response).isNotNull();
+        assertThat(response.getId()).isEqualTo(1L);
+        assertThat(response.getEmail()).isEqualTo("test@gmail.com");
+        assertThat(response.getFirstName()).isEqualTo("Mustafa");
+        assertThat(response.getLastName()).isEqualTo("Ilter");
 
-        verify(userRepository, times(1)).findByEmail("user@gmail.com");
+        verify(currentUserProvider).getCurrentUser();
     }
 
     @Test
-    void getMe_WhenCurrentUserNotFound_ShouldThrowBaseException() {
-        setAuthenticatedUser("unknown@gmail.com");
+    void changePassword_whenNewPasswordIsDifferent_shouldUpdatePassword() {
+        ChangePasswordRequest request = new ChangePasswordRequest();
+        request.setPassword("newPassword123");
 
-        when(userRepository.findByEmail("unknown@gmail.com")).thenReturn(Optional.empty());
+        when(currentUserProvider.getCurrentUser()).thenReturn(user);
+        when(passwordEncoder.matches("newPassword123", "encodedOldPassword")).thenReturn(false);
+        when(passwordEncoder.encode("newPassword123")).thenReturn("encodedNewPassword");
 
-        assertThrows(BaseException.class, () -> userService.getMe());
+        userService.changePassword(request);
 
-        verify(userRepository, times(1)).findByEmail("unknown@gmail.com");
+        assertThat(user.getPasswordHash()).isEqualTo("encodedNewPassword");
+
+        verify(currentUserProvider).getCurrentUser();
+        verify(passwordEncoder).matches("newPassword123", "encodedOldPassword");
+        verify(passwordEncoder).encode("newPassword123");
+        verify(userRepository).save(user);
     }
 
     @Test
-    void changePassword_WhenPasswordIsValid_ShouldChangePassword() {
-        setAuthenticatedUser("user@gmail.com");
+    void changePassword_whenNewPasswordIsSameWithOldPassword_shouldThrowException() {
+        ChangePasswordRequest request = new ChangePasswordRequest();
+        request.setPassword("oldPassword123");
 
-        when(userRepository.findByEmail("user@gmail.com")).thenReturn(Optional.of(normalUser));
-        when(passwordEncoder.matches("newPassword", normalUser.getPasswordHash())).thenReturn(false);
-        when(passwordEncoder.encode("newPassword")).thenReturn("newEncodedPassword");
-        when(userRepository.save(normalUser)).thenReturn(normalUser);
+        when(currentUserProvider.getCurrentUser()).thenReturn(user);
+        when(passwordEncoder.matches("oldPassword123", "encodedOldPassword")).thenReturn(true);
 
-        userService.changePassword(changePasswordRequest);
+        assertThatThrownBy(() -> userService.changePassword(request))
+                .isInstanceOf(BaseException.class);
 
-        assertEquals("newEncodedPassword", normalUser.getPasswordHash());
-
-        verify(userRepository, times(1)).findByEmail("user@gmail.com");
-        verify(passwordEncoder, times(1)).matches("newPassword", "oldEncodedPassword");
-        verify(passwordEncoder, times(1)).encode("newPassword");
-        verify(userRepository, times(1)).save(normalUser);
-    }
-
-    @Test
-    void changePassword_WhenPasswordMatchesOldPassword_ShouldThrowBaseException() {
-        setAuthenticatedUser("user@gmail.com");
-
-        when(userRepository.findByEmail("user@gmail.com")).thenReturn(Optional.of(normalUser));
-        when(passwordEncoder.matches("newPassword", normalUser.getPasswordHash())).thenReturn(true);
-
-        assertThrows(BaseException.class, () -> userService.changePassword(changePasswordRequest));
-
-        verify(userRepository, times(1)).findByEmail("user@gmail.com");
-        verify(passwordEncoder, times(1)).matches("newPassword", "oldEncodedPassword");
+        verify(currentUserProvider).getCurrentUser();
+        verify(passwordEncoder).matches("oldPassword123", "encodedOldPassword");
         verify(passwordEncoder, never()).encode(anyString());
         verify(userRepository, never()).save(any(User.class));
     }
 
     @Test
-    void changePassword_WhenCurrentUserNotFound_ShouldThrowBaseException() {
-        setAuthenticatedUser("unknown@gmail.com");
+    void deleteMe_shouldRestoreStockForFutureEventsAndDeleteUser() {
+        Event futureEvent = new Event();
+        futureEvent.setId(10L);
+        futureEvent.setDateTime(LocalDateTime.now().plusDays(3));
+        futureEvent.setAvailableStock(20);
 
-        when(userRepository.findByEmail("unknown@gmail.com")).thenReturn(Optional.empty());
+        Event pastEvent = new Event();
+        pastEvent.setId(20L);
+        pastEvent.setDateTime(LocalDateTime.now().minusDays(3));
+        pastEvent.setAvailableStock(15);
 
-        assertThrows(BaseException.class, () -> userService.changePassword(changePasswordRequest));
+        TicketPurchase futurePurchase = new TicketPurchase();
+        futurePurchase.setId(100L);
+        futurePurchase.setUser(user);
+        futurePurchase.setEvent(futureEvent);
+        futurePurchase.setQuantity(2);
 
-        verify(userRepository, times(1)).findByEmail("unknown@gmail.com");
-        verify(passwordEncoder, never()).matches(anyString(), anyString());
-        verify(passwordEncoder, never()).encode(anyString());
-        verify(userRepository, never()).save(any(User.class));
-    }
+        TicketPurchase pastPurchase = new TicketPurchase();
+        pastPurchase.setId(200L);
+        pastPurchase.setUser(user);
+        pastPurchase.setEvent(pastEvent);
+        pastPurchase.setQuantity(5);
 
-    @Test
-    void deleteMe_WhenUserHasFutureTickets_ShouldIncreaseAvailableStockAndDeleteUser() {
-        setAuthenticatedUser("user@gmail.com");
-
-        Event futureEvent1 = Event.builder()
-                .id(1L)
-                .name("Rock Concert")
-                .category("Music")
-                .description("Rock event")
-                .dateTime(LocalDateTime.now().plusDays(5))
-                .location("Istanbul")
-                .price(new BigDecimal("500.00"))
-                .totalStock(100)
-                .availableStock(80)
-                .build();
-
-        Event futureEvent2 = Event.builder()
-                .id(2L)
-                .name("Football Match")
-                .category("Sport")
-                .description("Football event")
-                .dateTime(LocalDateTime.now().plusDays(10))
-                .location("Kadikoy")
-                .price(new BigDecimal("300.00"))
-                .totalStock(200)
-                .availableStock(150)
-                .build();
-
-        TicketPurchase ticketPurchase1 = TicketPurchase.builder()
-                .id(1L)
-                .user(normalUser)
-                .event(futureEvent1)
-                .quantity(2)
-                .totalPrice(new BigDecimal("1000.00"))
-                .purchasedAt(LocalDateTime.now())
-                .build();
-
-        TicketPurchase ticketPurchase2 = TicketPurchase.builder()
-                .id(2L)
-                .user(normalUser)
-                .event(futureEvent2)
-                .quantity(3)
-                .totalPrice(new BigDecimal("900.00"))
-                .purchasedAt(LocalDateTime.now())
-                .build();
-
-        when(userRepository.findByEmail("user@gmail.com")).thenReturn(Optional.of(normalUser));
+        when(currentUserProvider.getCurrentUser()).thenReturn(user);
         when(ticketPurchaseRepository.findByUserId(1L))
-                .thenReturn(Arrays.asList(ticketPurchase1, ticketPurchase2));
+                .thenReturn(List.of(futurePurchase, pastPurchase));
 
         userService.deleteMe();
 
-        assertEquals(82, futureEvent1.getAvailableStock());
-        assertEquals(153, futureEvent2.getAvailableStock());
+        assertThat(futureEvent.getAvailableStock()).isEqualTo(22);
+        assertThat(pastEvent.getAvailableStock()).isEqualTo(15);
 
-        verify(userRepository, times(1)).findByEmail("user@gmail.com");
-        verify(ticketPurchaseRepository, times(1)).findByUserId(1L);
-        verify(eventRepository, times(1)).save(futureEvent1);
-        verify(eventRepository, times(1)).save(futureEvent2);
-        verify(userRepository, times(1)).delete(normalUser);
-    }
-
-    @Test
-    void deleteMe_WhenUserHasPastTickets_ShouldNotIncreaseAvailableStockButDeleteUser() {
-        setAuthenticatedUser("user@gmail.com");
-
-        Event pastEvent = Event.builder()
-                .id(1L)
-                .name("Old Concert")
-                .category("Music")
-                .description("Old event")
-                .dateTime(LocalDateTime.now().minusDays(2))
-                .location("Istanbul")
-                .price(new BigDecimal("500.00"))
-                .totalStock(100)
-                .availableStock(80)
-                .build();
-
-        TicketPurchase pastTicketPurchase = TicketPurchase.builder()
-                .id(1L)
-                .user(normalUser)
-                .event(pastEvent)
-                .quantity(2)
-                .totalPrice(new BigDecimal("1000.00"))
-                .purchasedAt(LocalDateTime.now().minusDays(5))
-                .build();
-
-        when(userRepository.findByEmail("user@gmail.com")).thenReturn(Optional.of(normalUser));
-        when(ticketPurchaseRepository.findByUserId(1L))
-                .thenReturn(Collections.singletonList(pastTicketPurchase));
-
-        userService.deleteMe();
-
-        assertEquals(80, pastEvent.getAvailableStock());
-
-        verify(userRepository, times(1)).findByEmail("user@gmail.com");
-        verify(ticketPurchaseRepository, times(1)).findByUserId(1L);
-        verify(eventRepository, never()).save(any(Event.class));
-        verify(userRepository, times(1)).delete(normalUser);
-    }
-
-    @Test
-    void deleteMe_WhenUserHasNoTickets_ShouldDeleteUser() {
-        setAuthenticatedUser("user@gmail.com");
-
-        when(userRepository.findByEmail("user@gmail.com")).thenReturn(Optional.of(normalUser));
-        when(ticketPurchaseRepository.findByUserId(1L)).thenReturn(Collections.emptyList());
-
-        userService.deleteMe();
-
-        verify(userRepository, times(1)).findByEmail("user@gmail.com");
-        verify(ticketPurchaseRepository, times(1)).findByUserId(1L);
-        verify(eventRepository, never()).save(any(Event.class));
-        verify(userRepository, times(1)).delete(normalUser);
-    }
-
-    @Test
-    void deleteMe_WhenCurrentUserIsAdmin_ShouldThrowBaseException() {
-        setAuthenticatedUser("admin@gmail.com");
-
-        when(userRepository.findByEmail("admin@gmail.com")).thenReturn(Optional.of(adminUser));
-
-        assertThrows(BaseException.class, () -> userService.deleteMe());
-
-        verify(userRepository, times(1)).findByEmail("admin@gmail.com");
-        verify(ticketPurchaseRepository, never()).findByUserId(anyLong());
-        verify(eventRepository, never()).save(any(Event.class));
-        verify(userRepository, never()).delete(any(User.class));
-    }
-
-    @Test
-    void deleteMe_WhenCurrentUserNotFound_ShouldThrowBaseException() {
-        setAuthenticatedUser("unknown@gmail.com");
-
-        when(userRepository.findByEmail("unknown@gmail.com")).thenReturn(Optional.empty());
-
-        assertThrows(BaseException.class, () -> userService.deleteMe());
-
-        verify(userRepository, times(1)).findByEmail("unknown@gmail.com");
-        verify(ticketPurchaseRepository, never()).findByUserId(anyLong());
-        verify(eventRepository, never()).save(any(Event.class));
-        verify(userRepository, never()).delete(any(User.class));
+        verify(currentUserProvider).getCurrentUser();
+        verify(ticketPurchaseRepository).findByUserId(1L);
+        verify(eventRepository).save(futureEvent);
+        verify(eventRepository, never()).save(pastEvent);
+        verify(userRepository).delete(user);
     }
 }
